fix: update backdrop color and add blur effect for improved visibility in lightbox

--- a/src/sass/general.scss
+++ b/src/sass/general.scss
@@ -788,7 +788,8 @@ body.logged-in {
 }
 
 .fancybox__backdrop {
-	background-color: rgba(0,0,0, 0.3);
+	background-color: rgba(0,0,0, 0.7);
+	backdrop-filter: blur(8px);
 }
 
 .image-lightbox {
